--- a/.travis.yml
+++ b/.travis.yml
@@ -12,3 +12,5 @@ before_install:
 script:
   - set -o pipefail && xcodebuild test -workspace Example/PaperTrailLog.xcworkspace -scheme PaperTrailLog-Example -sdk iphonesimulator9.3 ONLY_ACTIVE_ARCH=NO | xcpretty
   - pod lib lint
+notifications:
+  slack: swift-yah:H6s3LoiOO0pjJOjoDRuK4xBV
